--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '@layouts/Layout.astro';
 import Header from '@components/Header.astro';
+import '@fontsource-variable/merienda';
+
 ---
 
 <Layout title="Welcome to Astro.">
