add about me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
+import '@fontsource-variable/merienda';
 import Layout from '@layouts/Layout.astro';
 import Header from '@components/Header.astro';
-import '@fontsource-variable/merienda';
-
+import AboutMe from '@components/AboutMe.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-	<Header />		
+	<Header />
+	<AboutMe />	
 	</main>
 </Layout>
