--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import '@fontsource-variable/merienda';
+import '@fontsource/roboto';
+
 import Layout from '@layouts/Layout.astro';
 import Header from '@components/Header.astro';
 import AboutMe from '@components/AboutMe.astro';
