change favicon and page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const companies: CompanyType[]= [
 
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="ENNBOU">
 	<main>
 	<Header />
 	<AboutMe />
