--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -17,7 +17,7 @@ const { title, name, description, repositoryLink, isPrivate, isReady, production
 ---
 
 <a href={isReady === false ? "#" : repositoryLink} class:list={[repositoryLink ? "" : "pointer-events-none" ]}>
-  <div class="bg-gray-800 rounded-md shadow-md text-white hover:scale-105 transition-transform duration-300">
+  <div class="bg-gray-800 rounded-md shadow-md text-white hover:scale-105 transition-transform duration-300 h-full flex flex-col">
     <div class="text-lg p-4">
       {title}
 
@@ -27,7 +27,7 @@ const { title, name, description, repositoryLink, isPrivate, isReady, production
     </div>
     <div class="h-0.5 bg-slate-500 w-100"></div>
     <div class="text-2xl p-4 pb-0">{name}</div>
-    <div class="text-lg p-4">{description}</div>
+    <div class="text-lg p-4 flex-grow">{description}</div>
     <div class="flex flex-row p-4">
       {
         technologies.map((technology) => (
