--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -140,7 +140,7 @@ const projects: ProjectType[] = [
       }
     </div>
     <SectionTitle title="Projects" />
-    <div class="grid grid-cols-3 gap-4 p-8">
+    <div class="grid lg:grid-cols-2 2xl:grid-cols-3 gap-4 p-8">
       {
         projects.map(({ project }) => (
           <div>
