--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -21,7 +21,7 @@ const cicd = {
 ---
 
 <div class="bg-purple-600 text-white pt-80 pb-40">
-  <div class="text-center w-7/12 mx-auto">
+  <div class="text-center w-11/12 lg:w-7/12 mx-auto">
     <div class="text-5xl font-bold p-4">Hello, I'm Bouchaib</div>
     <p class="justify-center text-xl">
       iOS App Developer, I have cultivated a diverse skill set across various platforms, including Web and Android.
@@ -31,7 +31,7 @@ const cicd = {
   </div>
 </div>
 
-<div class="flex flex-col lg:flex-row w-9/12 mx-auto bg-slate-50 p-10 -mt-20 rounded-md drop-shadow-xl mb-20">
+<div class="flex flex-col lg:flex-row w-11/12 lg:w-9/12 mx-auto bg-slate-50 p-4 lg:p-10 -mt-20 rounded-md drop-shadow-xl mb-20">
   <div class="basis-1/3 lg:border-r-2 border-gray-100 pr-4 mr-4"><Card title={conception.name} body={conception.body} /></div>
   <div class="basis-1/3 lg:border-r-2 border-gray-100 pr-4 mr-4"><Card title={development.name} body={development.body} /></div>
   <div class="basis-1/3"><Card title={cicd.name} body={cicd.body} /></div>
