--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import setupImage from '@images/setupImage.png';
 ---
 
 <div class="flex justify-center flex-col items-center h-full p-8 pb-0">
-  <div class="text-6xl text-purple-600 pt-12 font-merienda">Mobile App Developer</div>
-  <div class="text-2xl text-gray-500 pb-8 pt-2">iOS and Android developement, and also React Native</div>
-  <Image src={setupImage} alt="setup image" class="max-w-full max-h-full w-8/12"/>
+  <div class="text-4xl lg:text-6xl text-purple-600 pt-12 font-merienda text-center">Mobile App Developer</div>
+  <div class="text-xl lg:text-2xl text-gray-500 pb-8 pt-2 text-center">iOS and Android developement, and also React Native</div>
+  <Image src={setupImage} alt="setup image" class="max-w-full max-h-full w-full lg:w-8/12"/>
 </div>
 
