--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -18,7 +18,7 @@ const { title, name, description, repositoryLink, isPrivate, isReady, production
 
 <a href={isReady === false ? "#" : repositoryLink} class:list={[repositoryLink ? "" : "pointer-events-none" ]}>
   <div class="bg-gray-800 rounded-md shadow-md text-white hover:scale-105 transition-transform duration-300 h-full flex flex-col">
-    <div class="text-lg p-4">
+    <div class="text-lg p-4 flex flex-wrap">
       {title}
 
       {isReady === false && <span class=" bg-purple-500 text-white px-2 mx-2 rounded">coming soon</span>}
@@ -28,12 +28,10 @@ const { title, name, description, repositoryLink, isPrivate, isReady, production
     <div class="h-0.5 bg-slate-500 w-100"></div>
     <div class="text-2xl p-4 pb-0">{name}</div>
     <div class="text-lg p-4 flex-grow">{description}</div>
-    <div class="flex flex-row p-4">
+    <div class="p-2">
       {
         technologies.map((technology) => (
-          <div>
             <span class="inline-block bg-gray-500 text-white px-2 m-1 rounded-md">{technology}</span>
-          </div>
         ))
       }
     </div>
