--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,7 @@
 ---
 import Card from "@components/Card.astro";
+import { Image } from 'astro:assets';
+import {  images } from '@images/index.astro';
 
 const conception = {
   name: "Conception",
@@ -20,8 +22,9 @@ const cicd = {
 }
 ---
 
-<div class="bg-purple-600 text-white pt-80 pb-40">
+<div class="bg-purple-600 text-white pt-32 pb-40">
   <div class="text-center w-11/12 lg:w-7/12 mx-auto">
+   <Image src={images.avatarDev} alt="avatar dev image" class="m-auto mb-8"/>
     <div class="text-5xl font-bold p-4">Hello, I'm Bouchaib</div>
     <p class="justify-center text-xl">
       iOS App Developer, I have cultivated a diverse skill set across various platforms, including Web and Android.
