--- a/src/components/Company.astro
+++ b/src/components/Company.astro
@@ -1,7 +1,9 @@
 ---
+import { Image } from 'astro:assets';
 export interface Props {
   company:{
     name: string;
+    image: any;
     startDate: Date;
     endDate: Date | undefined;
     contractType: string;
@@ -14,25 +16,30 @@ export interface Props {
   }
 }
 const data = Astro.props as Props
-const {name, startDate, endDate, location, locationType, employmentType, description, profileHeadline, technologies} = data.company
+const {name, image, startDate, endDate, location, locationType, employmentType, description, profileHeadline, technologies} = data.company
 const months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
 const startDateFormatted = `${months[startDate.getMonth()]} ${startDate.getFullYear()}`
-const endDateFormatted = endDate ? `${months[endDate.getMonth()]} ${endDate.getFullYear()}` : "Presnet"
+const endDateFormatted = endDate ? `${months[endDate.getMonth()]} ${endDate.getFullYear()}` : "Presnettype "
 ---
 
 <div class="m-3 rounded shadow h-full flex flex-col">
-  <div class="p-3">
-    <div class="text-2xl">
-      {profileHeadline}
+  <div class="flex justify-between">
+    <div class="p-3">
+      <div class="text-2xl">
+        {profileHeadline}
+      </div>
+      <div class="text-xl">
+        {name} . {employmentType}
+      </div>
+      <div class="text-gray-500">
+        {startDateFormatted} - {endDateFormatted} 
+      </div>
+      <div class="text-gray-500">
+        {location} . {locationType}
+      </div>
     </div>
-    <div class="text-xl">
-      {name} . {employmentType}
-    </div>
-    <div class="text-gray-500">
-      {startDateFormatted} - {endDateFormatted} 
-    </div>
-    <div class="text-gray-500">
-      {location} . {locationType}
+    <div class="w-20">
+      <Image src={image} alt="setup image" class="p-4"/>
     </div>
   </div>
   <div class="h-0.5 bg-gray-200 mb-4"></div>
