--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,4 +1,6 @@
 ---
+import ogImage from '@images/setupImage.png';
+
 interface Props {
 	title: string;
 }
@@ -10,10 +12,14 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="About Me" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta property="og:title" content="The Rock" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://ennbou.com" />
+		<meta property="og:image" content={`https://ennbou.com${ogImage.src}`} />
 		<title>{title}</title>
 	</head>
 	<body class="font-roboto">
