--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta property="og:title" content="The Rock" />
+		<meta property="og:title" content="Bouchaib's Portfolio" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://ennbou.com" />
 		<meta property="og:image" content={`https://ennbou.com${ogImage.src}`} />
