change open graph image resolution

--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,5 +1,5 @@
 ---
-import ogImage from '@images/setupImage.png';
+import ogImage from '@images/setupImage2.png';
 
 interface Props {
 	title: string;
