change open graph image type from png to jpg

--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,5 +1,5 @@
 ---
-import ogImage from '@images/setupImage2.png';
+import ogImage from '@images/setupImage2.jpg';
 
 interface Props {
 	title: string;
