--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,5 +1,5 @@
 ---
-import ogImage from '@images/setupImage2.jpg';
+import ogImage from "@images/setupImage2.jpg";
 
 interface Props {
 	title: string;
@@ -16,10 +16,22 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta property="og:title" content="Bouchaib's Portfolio" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://ennbou.com" />
-		<meta property="og:image" content={`https://ennbou.com${ogImage.src}`} />
+
+		<meta property="og:image:alt" content="ennbou.com img" />
+		<meta property="og:site_name" content="EnnBou" />
+		<meta property="og:url" content="https://ennbou.com/portfolio/">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content={`https://ennbou.com${ogImage.src}`}/>
+		<meta property="og:title" content="EnnBou">
+		<meta property="og:description" content="Bouchaib">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="ennbou.com">
+		<meta property="twitter:url" content="https://ennbou.com/portfolio/">
+		<meta name="twitter:title" content="EnnBou">
+		<meta name="twitter:description" content="Bouchaib">
+		<meta name="twitter:image" content=`https://ennbou.com${ogImage.src}`>
+
 		<title>{title}</title>
 	</head>
 	<body class="font-roboto">
