testing new github action

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -25,7 +25,7 @@ const cicd = {
 <div class="bg-purple-600 text-white pt-32 pb-40">
   <div class="text-center w-11/12 lg:w-7/12 mx-auto">
    <Image src={images.avatarDev} alt="avatar dev image" class="m-auto mb-8"/>
-    <div class="text-5xl font-bold p-4">Hello, I'm Bouchaib</div>
+    <div class="text-5xl font-bold p-4">Hello, I'm ENNBOU</div>
     <p class="justify-center text-xl">
       iOS App Developer, I have cultivated a diverse skill set across various platforms, including Web and Android.
       However, my passion lies in iOS development, and I currently hold the position of iOS Developer. In this role, I
